# test_pytorch

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-package.yml
notebooks/: test_pytorch_tensorboard_001.ipynb
