[tool.poetry]
name = "testorch"
version = "0.1.0"
description = ""
authors = ["hiro <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pip = "^21.0.1"
numpy = "^1.20.1"
scipy = "^1.6.1"
pandas = "^1.2.3"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
scikit-learn = "^0.24.1"
torch = "^1.8.0"
torchvision = "^0.9.0"
PyYAML = "^5.4.1"
click = "^7.1.2"
mypy = "^0.812"
jupyterlab = "^3.0.10"

[tool.poetry.dev-dependencies]
pre-commit = "^2.11.1"
fastprogress = "^1.0.0"
tqdm = "^4.59.0"
tensorboard = "^2.4.1"
autoflake = "^1.4"
pytest = "^6.2.2"
black = "^20.8b1"
isort = "^5.7.0"
mock = "^4.0.3"
jupyterlab-code-formatter = "^1.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
